# leaderboard-agents

./: .gitignore  .gitmodules  README.md
_utils/: docker-gui
human_agent/: Dockerfile  README.md  make_docker.sh  run_docker.sh
human_agent/team_code/: human_agent.py
log_agent/: Dockerfile  README.md  make_docker.sh  recorder_replayer.py  run_docker.sh  run_evaluation.sh
log_agent/team_code/: human_agent.py  (+4 more)
map_agent/: Dockerfile  Dockerfile.master  README.md  make_docker.sh  run_docker.sh
performance_agent/: Dockerfile  README.md  entrypoint.sh  make_docker.sh  run_docker.sh
profiler_agent/: Dockerfile  README.md  make_docker.sh  run_docker.sh
ros2_human_agent/: Dockerfile  README.md  make_docker.sh  run_docker.sh
ros_human_agent/: Dockerfile  README.md  entrypoint.sh  make_docker.sh  run_docker.sh
ros_human_agent/team_code/src/human_agent/: CMakeLists.txt  package.xml  setup.py
ros_human_agent/team_code/src/human_agent/config/: config.rviz
ros_human_agent/team_code/src/human_agent/launch/: human_agent.launch
ros_human_agent/team_code/src/human_agent/nodes/: human_agent
ros_human_agent/team_code/src/human_agent/src/human_agent/: human_agent.py
ros_map_agent/: Dockerfile  README.md  make_docker.sh  run_docker.sh
ros_map_agent/team_code/src/ros_map_agent/: CMakeLists.txt  package.xml  setup.py
ros_map_agent/team_code/src/ros_map_agent/config/: config.rviz
ros_map_agent/team_code/src/ros_map_agent/launch/: ros_map_agent.launch
ros_map_agent/team_code/src/ros_map_agent/nodes/: ros_map_agent
ros_map_agent/team_code/src/ros_map_agent/src/ros_map_agent/: map_agent  ros_map_agent.py
(+28 files in other folders)
