<?xml version="1.0"?>
<package format="3">
  <name>human_agent</name>
  <version>0.0.1</version>
  <description>The human_agent package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <depend>carla_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
